repo-link added

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <b>GitHub</b>.
       <a
         style="color: black"
-        href="http://"
+        href="https://github.com/M-Saad-mizri/WhatsApp-Chat-Analyzer"
         target="_blank"
         rel="noopener noreferrer"
       >
